# chess-2

./: README.md  chess2.cabal
app/: App.hs  BoardWidget.hs  ImageLoader.hs  Main.hs
src/: GameState.hs  Move.hs  MoveDSL.hs
