cabal-version:      2.4
name:               chess2
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: chess 2 electric boogaloo

-- The license under which the package is released.
-- license:

author:             Mason Anderson
maintainer:         masonanderson0@gmail.com

extra-source-files: README.md

executable chess2
    main-is:          Main.hs
    hs-source-dirs: app
                    src

    -- Modules included in this executable, other than Main.
    other-modules: BoardWidget
                 , ImageLoader
                 , GameState
                 , Move
                 , MoveDSL
                 , App

    build-depends: base
                 , monomer
                 , lens
                 , text
                 , text-show
                 , vector
                 , data-default
                 , bytestring
                 , JuicyPixels
                 , bytestring-to-vector
                 , containers
                 , array
                 , free
                 , mtl

    default-extensions: OverloadedStrings
                      , FlexibleContexts
                      , FlexibleInstances
    default-language: Haskell2010
    ghc-options: -Wall
                 -Wno-missing-signatures

